--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
+    "mongoose-paginate-v2": "^1.7.4",
+    "moongose": "^1.0.0",
+    "morgan": "^1.10.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
   },
