--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
   "dependencies": {
     "boxicons": "^2.1.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "mongoose-paginate-v2": "^1.7.4",
     "moongose": "^1.0.0",
     "morgan": "^1.10.0",
+    "passport-github2": "^0.1.12",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
   },
