--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moongose": "^1.0.0",
     "morgan": "^1.10.0",
     "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
   },
